AWS SDK v2 に合わせて修正、Windows 向けの対応を追加

--- a/config.sample.yml
+++ b/config.sample.yml
@@ -1,11 +1,12 @@
-access_key_id: 'AKxxxxxxxxxxxxxxxxxxxxx'
-secret_access_key: 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
-region: 'us-east-1'
-user: "root"
-key: "/pat/to/file.pem"
-instance_type: "t1.micro"
+access_key_id: 'AKxxxxxxxxxxxxxxxxxxxxxxxxxx'
+secret_access_key: 'xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx'
+region: 'ap-northeast-1'
+user: "username"
+key_path: "/path/to/key.pem"
+instance_type: "t2.micro"
 vpc_subnet: "subnet-xxxxxxxx"
-security_group: "sg-xxxxxxx"
-key_name: "file"
-tag_name: "instance_name"
-image_tag_name: "ami_name"
+security_group: "sg-xxxxxxxxx"
+key_name: "keyname"
+tag_name: "tagname"
+image_tag_name: "imagename"
+user_data_path: "userdata.txt"
